@@ -581,7 +581,7 @@ function item_type2str($type = null){
 						$key = str_replace('{HOST.NAME}', $host['name'], $key);
 						break;
 					case '{HOSTNAME}':	/* deprecated */
-						$key = str_replace('{HOSTNAME}', $host['host'], $key);
+						$key = str_replace('{HOSTNAME}', $host['name'], $key);
 						break;
 					case '{HOST.HOST}':
 						$key = str_replace('{HOST.HOST}', $host['host'], $key);
